<resources>
    <string name="app_name">Combustion</string>
    <string name="title_home">Home</string>
    <string name="title_history">History</string>
    <string name="title_fuel">Fuel</string>
    <string name="combustion">Combustion</string>
    <string name="distance">Distance</string>
    <string name="fuel">Fuel</string>
    <string name="cost">Cost</string>
    <string name="cost_per_kilometer">zł/km</string>
    <string name="on_the_meter">odometer</string>
    <string name="liters" >fuel bought</string>
    <string name="cost_per_liter">zł/l</string>
    <string name="send">Send</string>
    <string name="station">station</string>
    <string name="location">location</string>
</resources>