<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fuel.FuelFragment"
    android:gravity="center"
    android:padding="20dp"
    android:background="@color/md_theme_dark_background"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/container"
        android:padding="30dp"
        >

        <Spinner
            android:id="@+id/cars"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            style="@style/Theme.Combustion.EditText.Style"
            android:layout_marginBottom="10dp"
            />

        <EditText
            android:id="@+id/on_the_meter"
            style="@style/Theme.Combustion.EditText.Style"
            android:drawableStart="@drawable/input_icon_combustion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/on_the_meter"
            android:inputType="number" />

        <EditText
            android:id="@+id/liters"
            style="@style/Theme.Combustion.EditText.Style"
            android:drawableStart="@drawable/input_icon_fuel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/liters"
            android:inputType="numberDecimal"
            android:autofillHints="" />

        <EditText
            android:id="@+id/cost_per_liter"
            style="@style/Theme.Combustion.EditText.Style"
            android:drawableStart="@drawable/input_icon_cost"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/cost_per_liter"
            android:inputType="numberDecimal"
            android:autofillHints="" />

        <EditText
            android:id="@+id/station_edit_text"
            style="@style/Theme.Combustion.EditText.Style"
            android:drawableStart="@drawable/input_icon_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/location"
            android:inputType="text"
            android:autofillHints="" />


        <Button
            android:id="@+id/send"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/send"
            />
    </LinearLayout>


</LinearLayout>